--- a/spotify-clone/package.json
+++ b/spotify-clone/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-h5-audio-player": "^3.10.0-rc.1",
     "react-resizable-panels": "^2.1.7"
   },
   "devDependencies": {
